--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
 
         <activity android:name=".MainActivity" android:exported="true" android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".CalculatorActivity" android:exported="true" />
     </application>
 
 </manifest>
