--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity android:name=".MainActivity" android:exported="true" android:windowSoftInputMode="adjustNothing"/>
         <activity android:name=".CalculatorActivity" android:exported="true" />
+        <activity android:name=".CheckoutActivity" android:exported="true" />
     </application>
 
 </manifest>
