계산기 상대 레이아웃

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             android:name=".CalculatorActivity"
             android:exported="true" />
 
+        <activity android:name=".Calcul" android:exported="true"/>
+
     </application>
 
 </manifest>
