--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,19 +22,24 @@
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustNothing" />
-
-        <activity android:name=".Calcul" android:exported="true"/>
-
+        <activity
+            android:name=".Calcul"
+            android:exported="true" />
     </application>
 
 </manifest>
