--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
 
         <activity android:name=".MainActivity" android:exported="true" android:windowSoftInputMode="adjustNothing"/>
-        <activity android:name=".CalculatorActivity" android:exported="true" />
+        <activity android:name=".Calcul" android:exported="true" />
         <activity android:name=".CheckoutActivity" android:exported="true" />
     </application>
 
