리프레쉬 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -24,11 +23,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-}
 
+}
 dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    //리사이클뷰 스와이프
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
