--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,9 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
-            android:name=".DatePickerFragment"
+            android:name=".Calculator.DatePickerFragment"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
@@ -33,17 +35,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Calcul_hotel"
+            android:name=".Calculator.Calcul_hotel"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".Calcul"
+            android:name=".Calculator.Calcul"
             android:exported="true" />
         <activity
-            android:name=".DogListActivity"
+            android:name=".ListDog.DogListActivity"
             android:exported="true" />
     </application>
 
