--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //shimmer-andrid 스켈레톤 로딩
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
+
 
 }
