--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //shimmer-andrid 스켈레톤 로딩
-    implementation "com.facebook.shimmer:shimmer:0.5.0"
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
 }
